# consul-kv-sync

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.txt  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-image.yaml  build.yaml  pull_request.yaml  release.yaml
scripts/: docker-compose.yaml
src/: consul.rs  main.rs
